--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="color-scheme" content="light dark">
     <title>Hello World!</title>
-
   </head>
   <body>
     <h1>💖 Hello World!</h1>
